Fix The Overflow Bug

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -25,6 +25,8 @@
   .header {
     grid-template-columns: 1fr auto auto;
     grid-template-areas: 'center left right';
+    max-width: 100vw;
+    overflow: hidden;
   }
 }
 
